--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     }
 
     .banner {
-      background: url('banner.jpg') center/cover no-repeat;
+      background: url('https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20081036.png?raw=true') center/cover no-repeat;
       height: 50vh;
       display: flex;
       justify-content: center;
