--- a/index.html
+++ b/index.html
@@ -213,12 +213,12 @@
       <button onclick="togglePanel(0)">Guitarras Acústicas</button>
       <div class="panel">
         <div class="producto">
-          <img src="acustica1.jpg" alt="Guitarra Acústica 1">
+          <img src="acustica1.jpg" alt="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20081851.png?raw=true">
           <p>Yamaha F310 - $3,000 MXN</p>
           <button>Más detalles</button>
         </div>
         <div class="producto">
-          <img src="acustica2.jpg" alt="Guitarra Acústica 2">
+          <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20081859.png?raw=true" alt="Guitarra Acústica 2">
           <p>Fender FA-125 - $3,500 MXN</p>
           <button>Más detalles</button>
         </div>
