--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
       <button onclick="togglePanel(1)">Guitarras Eléctricas</button>
       <div class="panel">
         <div class="producto">
-          <img src="electrica1.jpg" alt="Guitarra Eléctrica 1">
+          <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20082610.png?raw=true" alt="Guitarra Eléctrica 1">
           <p>Epiphone Les Paul - $7,200 MXN</p>
           <button>Más detalles</button>
         </div>
         <div class="producto">
-          <img src="electrica2.jpg" alt="Guitarra Eléctrica 2">
+          <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20082617.png?raw=true" alt="Guitarra Eléctrica 2">
           <p>Ibanez GRX40 - $6,800 MXN</p>
           <button>Más detalles</button>
         </div>
