--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
       <button onclick="togglePanel(0)">Guitarras Acústicas</button>
       <div class="panel">
         <div class="producto">
-          <img src="acustica1.jpg" alt="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20081851.png?raw=true">
+          <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20081851.png?raw=true" alt="Guitarra Acústica 1">
           <p>Yamaha F310 - $3,000 MXN</p>
           <button>Más detalles</button>
         </div>
@@ -241,12 +241,12 @@
       <button onclick="togglePanel(2)">Guitarras Clásicas</button>
       <div class="panel">
         <div class="producto">
-          <img src="clasica1.jpg" alt="Guitarra Clásica 1">
-          <p>Admira Alba - $4,500 MXN</p>
+          <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20083642.png?raw=true" alt="Guitarra Clásica 1">
+          <p>Rickenbacker - $4,500 MXN</p>
           <button>Más detalles</button>
         </div>
         <div class="producto">
-          <img src="clasica2.jpg" alt="Guitarra Clásica 2">
+          <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20083633.png?raw=true" alt="Guitarra Clásica 2">
           <p>Yamaha C40 - $3,900 MXN</p>
           <button>Más detalles</button>
         </div>
