--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     :root {
       --color-principal: #000;
-      --color-secundario: #d4af37;
+      --color-secundario: #d4af37; /* dorado */
       --color-fondo: #fff;
       --fuente: 'Segoe UI', sans-serif;
     }
@@ -78,7 +78,6 @@
       text-shadow: 1px 1px #000;
       font-size: 2rem;
       text-align: center;
-      padding: 2rem;
     }
 
     section {
@@ -121,7 +120,6 @@
     .producto img {
       width: 100%;
       max-width: 300px;
-      border-radius: 8px;
     }
 
     .producto button {
@@ -131,7 +129,6 @@
       color: var(--color-fondo);
       border: none;
       cursor: pointer;
-      border-radius: 4px;
     }
 
     .producto button:hover {
@@ -205,9 +202,9 @@
 
   <section id="quienes">
     <h2>Quiénes Somos</h2>
-    <p><strong>Misión:</strong> Ofrecer instrumentos de calidad que inspiren a cada músico.</p>
-    <p><strong>Visión:</strong> Ser la tienda líder en guitarras a nivel nacional, brindando experiencias únicas y fomentando el amor por la música.</p>
-    <p><strong>Valores:</strong> Pasión por la música desde 1990, compromiso, autenticidad, dedicación y excelencia artesanal.</p>
+    <p><strong>Misión:</strong> Ofrecer instrumentos musicales de la más alta calidad que acompañen el viaje artístico de cada músico, desde principiantes hasta profesionales. Nos dedicamos a brindar una experiencia personalizada que inspire creatividad y pasión por la música.</p>
+    <p><strong>Visión:</strong> Ser la tienda líder en guitarras a nivel nacional, reconocida por nuestra excelencia en servicio, conocimiento técnico y compromiso con la comunidad musical.</p>
+    <p><strong>Valores:</strong> Pasión por la música desde 1990, compromiso con la calidad, autenticidad en cada instrumento, y un trato humano que construye relaciones duraderas con nuestros clientes.</p>
   </section>
 
   <section id="productos">
@@ -217,12 +214,12 @@
       <div class="panel">
         <div class="producto">
           <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20081851.png?raw=true" alt="Guitarra Acústica 1">
-          <p>Yamaha F310 - $3,000 MXN</p>
+          <p><strong>Yamaha F310 - $3,000 MXN</strong><br>Construida con tapa de abeto y cuerpo de meranti, esta guitarra acústica es perfecta para quienes buscan un sonido cálido y una excelente relación calidad-precio. Ideal para estudiantes y músicos aficionados que desean una guitarra confiable y duradera.</p>
           <button>Más detalles</button>
         </div>
         <div class="producto">
           <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20081859.png?raw=true" alt="Guitarra Acústica 2">
-          <p>Fender FA-125 - $3,500 MXN</p>
+          <p><strong>Fender FA-125 - $3,500 MXN</strong><br>Esta guitarra ofrece una estética moderna con una sonoridad brillante. Su construcción de calidad y cómodo mástil hacen que tocar sea un placer tanto en casa como en presentaciones en vivo.</p>
           <button>Más detalles</button>
         </div>
       </div>
@@ -231,12 +228,12 @@
       <div class="panel">
         <div class="producto">
           <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20082610.png?raw=true" alt="Guitarra Eléctrica 1">
-          <p>Epiphone Les Paul - $7,200 MXN</p>
+          <p><strong>Epiphone Les Paul - $7,200 MXN</strong><br>Con un cuerpo sólido de caoba y humbuckers clásicos, esta guitarra es ideal para estilos como el rock, blues o metal. Su acabado elegante y sonido potente la hacen una opción favorita para músicos exigentes.</p>
           <button>Más detalles</button>
         </div>
         <div class="producto">
           <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20082617.png?raw=true" alt="Guitarra Eléctrica 2">
-          <p>Ibanez GRX40 - $6,800 MXN</p>
+          <p><strong>Ibanez GRX40 - $6,800 MXN</strong><br>Versátil y accesible, esta guitarra cuenta con tres pastillas (HSS), lo que permite un amplio rango de sonidos. Recomendada para principiantes con aspiraciones a explorar distintos géneros musicales.</p>
           <button>Más detalles</button>
         </div>
       </div>
@@ -245,12 +242,12 @@
       <div class="panel">
         <div class="producto">
           <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20083642.png?raw=true" alt="Guitarra Clásica 1">
-          <p>Rickenbacker - $4,500 MXN</p>
+          <p><strong>Rickenbacker - $4,500 MXN</strong><br>Diseñada para ofrecer un tono suave y envolvente, esta guitarra clásica combina tradición artesanal con un diseño refinado. Ideal para quienes buscan un sonido equilibrado y estética cuidada.</p>
           <button>Más detalles</button>
         </div>
         <div class="producto">
           <img src="https://github.com/Ang2809/guitarra/blob/main/Captura%20de%20pantalla%202025-05-27%20083633.png?raw=true" alt="Guitarra Clásica 2">
-          <p>Yamaha C40 - $3,900 MXN</p>
+          <p><strong>Yamaha C40 - $3,900 MXN</strong><br>Una de las guitarras clásicas más populares para principiantes. Con cuerdas de nailon y una estructura cómoda, permite desarrollar una técnica limpia y precisa desde las primeras lecciones.</p>
           <button>Más detalles</button>
         </div>
       </div>
@@ -259,7 +256,6 @@
 
   <section id="contacto">
     <h2>Contacto</h2>
-    <p>¿Tienes dudas, quieres conocer más modelos o necesitas mantenimiento? Agenda una cita en nuestro taller o escríbenos tu consulta:</p>
     <form id="formulario" onsubmit="return validarFormulario()">
       <input type="text" id="nombre" placeholder="Nombre">
       <input type="email" id="email" placeholder="Correo electrónico">
